--- a/grocery/index.html
+++ b/grocery/index.html
@@ -7,12 +7,32 @@
     <script src="lib/angular-route.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/tutorialCtrl.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/bootstrap-grid.css" >
 </head>
 <body>
 
-<div ng-view>
+
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">GroceryList</a>
+</nav>
+
+<ul class="list-group">
+    <li class="list-group-item active">Shampoo</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+</ul>
+
+
+<div >
 
 </div>
 
 </body>
+
+<script src="lib/bootstrap.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="lib/angular.min.js"></script>
 </html>
