--- a/grocery/index.html
+++ b/grocery/index.html
@@ -34,6 +34,7 @@
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.min.js"></script>
+<script src="lib/underscore.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/tutorialCtrl.js"></script>
 </html>
