--- a/grocery/index.html
+++ b/grocery/index.html
@@ -5,6 +5,7 @@
     <title>Tutorial app</app></title>
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/bootstrap-grid.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
 
